Add search box and button

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,24 @@
         </div>
       </nav>
     </header>
+    <!-- main start -->
+    <main>
+      <div class="container input-group my-3">
+        <input
+          type="text"
+          class="form-control text-center"
+          placeholder="Type Mobile Name"
+        />
+        <button
+          onclick="searchBtn()"
+          class="btn btn-outline-secondary"
+          type="button"
+          id="button-addon2"
+        >
+          Search
+        </button>
+      </div>
+    </main>
 
     <!-- bootstrap bundle -->
     <script src="../bootstrap/bootstrap.bundle.min.js"></script>
