--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
     <main>
       <div class="container input-group my-3">
         <input
+          id="search-box"
           type="text"
           class="form-control text-center"
           placeholder="Type Mobile Name"
