Add function -> clear Search Box

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
     <main>
       <div class="container input-group my-3">
         <input
+          onclick="clearSearchBox()"
           id="search-box"
           type="text"
           class="form-control text-center"
