add function -> loadMobileData

--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,9 @@
           Search
         </button>
       </div>
+      <div class="text-center">
+        <p>Not Found</p>
+      </div>
     </main>
 
     <!-- bootstrap bundle -->
