--- a/html/index.html
+++ b/html/index.html
@@ -24,26 +24,39 @@
     </header>
     <!-- main start -->
     <main>
-      <div class="container input-group my-3">
-        <input
-          onclick="clearSearchBox()"
-          id="search-box"
-          type="text"
-          class="form-control text-center"
-          placeholder="Type Mobile Name"
-        />
-        <button
-          onclick="searchBtn()"
-          class="btn btn-outline-secondary"
-          type="button"
-          id="button-addon2"
-        >
-          Search
-        </button>
-      </div>
-      <div class="text-center">
-        <p>Not Found</p>
-      </div>
+      <section>
+        <!-- search container -->
+        <div class="container input-group my-3">
+          <!-- search box -->
+          <input
+            onclick="clearSearchBox()"
+            id="search-box"
+            type="text"
+            class="form-control text-center"
+            placeholder="Type Mobile Name"
+          />
+
+          <!-- search button -->
+          <button
+            onclick="searchBtn()"
+            class="btn btn-outline-secondary"
+            type="button"
+            id="button-addon2"
+          >
+            Search
+          </button>
+        </div>
+        <!-- not found massage -->
+        <div class="text-center">
+          <p>Not Found</p>
+        </div>
+
+        <!-- cards -->
+        <div
+          id="cards-container"
+          class="row row-cols-1 row-cols-md-3 g-4"
+        ></div>
+      </section>
     </main>
 
     <!-- bootstrap bundle -->
