add details card

--- a/html/index.html
+++ b/html/index.html
@@ -62,6 +62,37 @@
           </div>
         </div>
 
+        <!-- details card -->
+        <div id="details-card">
+          <div class="card" style="width: 18rem">
+            <img
+              src="../apple-iphone-13-mini.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Apple apple-iphone-13-mini</h5>
+              <p>Main Features</p>
+              <hr />
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>Storage:</td>
+                    <td>128GB/256GB/512GB storage, no card slot</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">displaySize</th>
+                    <td>5.4 inches, 71.9 cm2 (~85.1% screen-to-body ratio)</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">chipSet</th>
+                    <td>"Apple A15 Bionic (5 nm)"</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
         <!-- cards -->
         <div
           id="cards-container"
