add sensors in details card

--- a/html/index.html
+++ b/html/index.html
@@ -64,29 +64,56 @@
 
         <!-- details card -->
         <div id="details-card">
-          <div class="card" style="width: 18rem">
+          <div class="card" style="width: 25rem">
             <img
               src="../apple-iphone-13-mini.jpg"
-              class="card-img-top"
+              class="card-img-top w-75"
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Apple apple-iphone-13-mini</h5>
+              <h5 class="card-title">Apple -iphone-13-mini</h5>
+              <br />
+              <p>Launch</p>
+              <hr />
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <th scope="row">Launch Date</th>
+                    <td>Released 2021, September 24</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
               <p>Main Features</p>
               <hr />
               <table class="table">
                 <tbody>
                   <tr>
-                    <td>Storage:</td>
+                    <th scope="row">Storage</th>
                     <td>128GB/256GB/512GB storage, no card slot</td>
                   </tr>
                   <tr>
-                    <th scope="row">displaySize</th>
+                    <th scope="row">Display Size</th>
                     <td>5.4 inches, 71.9 cm2 (~85.1% screen-to-body ratio)</td>
                   </tr>
                   <tr>
-                    <th scope="row">chipSet</th>
+                    <th scope="row">Chipset</th>
                     <td>"Apple A15 Bionic (5 nm)"</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Memory</th>
+                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+              <p>Sensors</p>
+              <hr />
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <th scope="row">Sensors</th>
+                    <td>df d, ff ,fdf</td>
                   </tr>
                 </tbody>
               </table>
