add others in details card

--- a/html/index.html
+++ b/html/index.html
@@ -117,6 +117,37 @@
                   </tr>
                 </tbody>
               </table>
+              <br />
+              <p>Others info</p>
+              <hr />
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <th scope="row">WLAN</th>
+                    <td>128GB/256GB/512GB storage, no card slot</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Bluetooth</th>
+                    <td>5.4 inches, 71.9 cm2 (~85.1% screen-to-body ratio)</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">GPS</th>
+                    <td>"Apple A15 Bionic (5 nm)"</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">NFC</th>
+                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Radio</th>
+                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">USB</th>
+                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
