--- a/html/index.html
+++ b/html/index.html
@@ -63,8 +63,8 @@
         </div>
 
         <!-- details card -->
-        <div id="details-card">
-          <div class="card" style="width: 25rem">
+        <div id="details-card" class="d-flex justify-content-center">
+          <!--  <div class="card" style="width: 25rem">
             <img
               src="../apple-iphone-13-mini.jpg"
               class="card-img-top w-75"
@@ -149,7 +149,7 @@
                 </tbody>
               </table>
             </div>
-          </div>
+          </div> -->
         </div>
         <!-- cards -->
         <div
