--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
   </head>
-  <body id="body" class="">
+  <body id="body" class="mb-5">
     <!-- header start -->
     <header>
       <nav class="navbar navbar-expand-lg bg-primary">
@@ -63,94 +63,8 @@
         </div>
 
         <!-- details card -->
-        <div id="details-card" class="d-flex justify-content-center">
-          <!--  <div class="card" style="width: 25rem">
-            <img
-              src="../apple-iphone-13-mini.jpg"
-              class="card-img-top w-75"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Apple -iphone-13-mini</h5>
-              <br />
-              <p>Launch</p>
-              <hr />
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <th scope="row">Launch Date</th>
-                    <td>Released 2021, September 24</td>
-                  </tr>
-                </tbody>
-              </table>
-              <br />
-              <p>Main Features</p>
-              <hr />
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <th scope="row">Storage</th>
-                    <td>128GB/256GB/512GB storage, no card slot</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Display Size</th>
-                    <td>5.4 inches, 71.9 cm2 (~85.1% screen-to-body ratio)</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Chipset</th>
-                    <td>"Apple A15 Bionic (5 nm)"</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Memory</th>
-                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
-                  </tr>
-                </tbody>
-              </table>
-              <br />
-              <p>Sensors</p>
-              <hr />
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <th scope="row">Sensors</th>
-                    <td>df d, ff ,fdf</td>
-                  </tr>
-                </tbody>
-              </table>
-              <br />
-              <p>Others info</p>
-              <hr />
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <th scope="row">WLAN</th>
-                    <td>128GB/256GB/512GB storage, no card slot</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Bluetooth</th>
-                    <td>5.4 inches, 71.9 cm2 (~85.1% screen-to-body ratio)</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">GPS</th>
-                    <td>"Apple A15 Bionic (5 nm)"</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">NFC</th>
-                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Radio</th>
-                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">USB</th>
-                    <td>"128GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM"</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div> -->
-        </div>
+        <div id="details-card" class="d-flex justify-content-center"></div>
+
         <!-- cards -->
         <div
           id="cards-container"
