add load data in startup

--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
             onclick="clearSearchBox()"
             id="search-box"
             type="text"
-            class="form-control text-center bg-light bg-opacity-50"
-            placeholder="Type Mobile Name"
+            class="form-control fs-4 text-center bg-light bg-opacity-50"
+            placeholder="Type device name"
           />
 
           <!-- search button -->
