--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T-Dong MobilePedia</title>
 
-    <!-- bootstrap css -->
-    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
+    <!--Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
   <body id="body" class="mb-5">
     <!-- header start -->
@@ -73,8 +78,13 @@
       </section>
     </main>
 
-    <!-- bootstrap bundle -->
-    <script src="../bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- JavaScript -->
     <script src="../js/app.js"></script>
   </body>
