remove html folder and fix js link

--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
     ></script>
 
     <!-- JavaScript -->
-    <script src="../js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
